tests/typestate_compile_fail/early_exec_from_mounts.stderr
error[E0599]: no method named `exec_payload` found for struct `Sandbox<MountsPrivate>` in the current scope
  --> tests/typestate_compile_fail/early_exec_from_mounts.rs:16:13
   |
16 |     sandbox.exec_payload(&["echo".to_string()]);
   |             ^^^^^^^^^^^^ method not found in `Sandbox<MountsPrivate>`
   |
   = note: the method was found for
           - `Sandbox<ExecReady>`
